// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountWizardStepResults Component should render a connected wizard results step with error: connected 1`] = `
<AccountWizardStepResults
  account={Object {}}
  accountName={null}
  dispatch={[Function]}
  edit={false}
  error={true}
  errorMessage="Lorem ipsum"
  fulfilled={false}
  pending={false}
  show={true}
/>
`;

exports[`AccountWizardStepResults Component should render a wizard results step with error: error 1`] = `
<AccountWizardStepResults
  accountName={null}
  edit={false}
  error={true}
  errorMessage="lorem ipsum"
  fulfilled={false}
  pending={false}
>
  <div
    className="wizard-pf-complete blank-slate-pf"
  >
    <div
      className="wizard-pf-success-icon"
    >
      <Icon
        name="error-circle-o"
        type="pf"
      >
        <PatternflyIcon
          className=""
          name="error-circle-o"
        >
          <span
            aria-hidden="true"
            className="pficon pficon-error-circle-o"
          />
        </PatternflyIcon>
      </Icon>
    </div>
    <h3
      className="blank-slate-pf-main-action"
    >
      Error 
      Creating
       Account
    </h3>
    <p
      className="blank-slate-pf-secondary-action"
    >
      lorem ipsum
    </p>
  </div>
</AccountWizardStepResults>
`;

exports[`AccountWizardStepResults Component should render a wizard results step with error: error edit 1`] = `
<AccountWizardStepResults
  accountName={null}
  edit={true}
  error={true}
  errorMessage="lorem ipsum"
  fulfilled={false}
  pending={false}
>
  <div
    className="wizard-pf-complete blank-slate-pf"
  >
    <div
      className="wizard-pf-success-icon"
    >
      <Icon
        name="error-circle-o"
        type="pf"
      >
        <PatternflyIcon
          className=""
          name="error-circle-o"
        >
          <span
            aria-hidden="true"
            className="pficon pficon-error-circle-o"
          />
        </PatternflyIcon>
      </Icon>
    </div>
    <h3
      className="blank-slate-pf-main-action"
    >
      Error 
      Updating
       Account
    </h3>
    <p
      className="blank-slate-pf-secondary-action"
    >
      lorem ipsum
    </p>
  </div>
</AccountWizardStepResults>
`;

exports[`AccountWizardStepResults Component should render a wizard results step with fulfilled: fulfilled 1`] = `
<AccountWizardStepResults
  accountName="test"
  edit={false}
  error={false}
  errorMessage={null}
  fulfilled={true}
  pending={false}
>
  <div
    className="wizard-pf-complete blank-slate-pf"
  >
    <div
      className="wizard-pf-success-icon"
    >
      <span
        className="glyphicon glyphicon-ok-circle"
      />
    </div>
    <h3
      className="blank-slate-pf-main-action"
    >
      <strong>
        test
      </strong>
       was 
      created
      .
    </h3>
  </div>
</AccountWizardStepResults>
`;

exports[`AccountWizardStepResults Component should render a wizard results step with fulfilled: fulfilled edit 1`] = `
<AccountWizardStepResults
  accountName="test"
  edit={true}
  error={false}
  errorMessage={null}
  fulfilled={true}
  pending={false}
>
  <div
    className="wizard-pf-complete blank-slate-pf"
  >
    <div
      className="wizard-pf-success-icon"
    >
      <span
        className="glyphicon glyphicon-ok-circle"
      />
    </div>
    <h3
      className="blank-slate-pf-main-action"
    >
      <strong>
        test
      </strong>
       was 
      updated
      .
    </h3>
  </div>
</AccountWizardStepResults>
`;

exports[`AccountWizardStepResults Component should render a wizard results step with pending: pending 1`] = `
<AccountWizardStepResults
  accountName="test"
  edit={false}
  error={false}
  errorMessage={null}
  fulfilled={false}
  pending={true}
>
  <div
    className="wizard-pf-process blank-slate-pf"
  >
    <Spinner
      className="blank-slate-pf-icon"
      inline={false}
      inverse={false}
      loading={true}
      size="lg"
    >
      <div
        className="blank-slate-pf-icon spinner spinner-lg"
      />
    </Spinner>
    <h3
      className="blank-slate-pf-main-action"
    >
      Creating
       Account...
    </h3>
    <p
      className="blank-slate-pf-secondary-action"
    >
      Please wait while account 
      <strong>
        test
      </strong>
       is being 
      created
      .
    </p>
  </div>
</AccountWizardStepResults>
`;

exports[`AccountWizardStepResults Component should render a wizard results step with pending: pending edit 1`] = `
<AccountWizardStepResults
  accountName="test"
  edit={true}
  error={false}
  errorMessage={null}
  fulfilled={false}
  pending={true}
>
  <div
    className="wizard-pf-process blank-slate-pf"
  >
    <Spinner
      className="blank-slate-pf-icon"
      inline={false}
      inverse={false}
      loading={true}
      size="lg"
    >
      <div
        className="blank-slate-pf-icon spinner spinner-lg"
      />
    </Spinner>
    <h3
      className="blank-slate-pf-main-action"
    >
      Updating
       Account...
    </h3>
    <p
      className="blank-slate-pf-secondary-action"
    >
      Please wait while account 
      <strong>
        test
      </strong>
       is being 
      updated
      .
    </p>
  </div>
</AccountWizardStepResults>
`;
